# PathNNs_expressive

./: LICENSE  README.md  pyproject.toml  requirements.txt
TUDatasets/: dataset_config.json  main_splits.py  model.py  utils.py
TUDatasets/datasets/: downdload_data.sh
TUDatasets/scripts/: DD_ap.sh  DD_sp.sh  DD_spplus.sh  ENZYMES_ap.sh  ENZYMES_sp.sh  ENZYMES_spplus.sh  IMDB-BINARY_ap.sh  IMDB-BINARY_sp.sh  IMDB-BINARY_spplus.sh  IMDB-MULTI_ap.sh  IMDB-MULTI_sp.sh  IMDB-MULTI_spplus.sh  NCI1_ap.sh  NCI1_sp.sh  NCI1_spplus.sh  PROTEINS_ap.sh  PROTEINS_sp.sh  PROTEINS_spplus.sh
benchmarks/: evaluator.py  main_ogb.py  model_ogb.py  peptides_functional.py  preprocess_data.py  utils.py
benchmarks/configs/: all_shortest_paths_hiv.json  all_shortest_paths_zinc_small.json  all_simple_paths_hiv.json  all_simple_paths_pepfunc.json  all_simple_paths_pepstruct.json  all_simple_paths_zinc.json  all_simple_paths_zinc_small.json  shortest_path_pepfunc.json  shortest_path_pepstruct.json  shortest_path_zinc.json
benchmarks/scripts/: ZINC_ap.sh  ZINC_sp.sh  ZINC_spplus.sh  ogbg-molhiv_ap.sh  ogbg-molhiv_sp.sh  ogbg-molhiv_spplus.sh  peptides-functional_ap.sh  peptides-functional_sp.sh  peptides-functional_spplus.sh  peptides-structural_ap.sh  peptides-structural_sp.sh  peptides-structural_spplus.sh
synthetic/: main.py
synthetic/configs/: CEXP_config.json  CSL_config.json  EXP_config.json  SR25_config.json
synthetic/dataset/: CSL.py  EXP.py  SR25.py
synthetic/networks/: model.py
synthetic/scripts/: CEXP.sh  CSL.sh  EXP.sh  SR25.sh
synthetic/utils/: dataset.py  loader.py  (+2 more)
(+11 files in other folders)
