[tool.poetry]
name = "cr_contrastive"
version = "0.1.0"
description = ""
authors = ["Karl Hayek"]

[tool.poetry.dependencies]
python = "^3.9"
torch = "^1.13.1"
transformers = "^4.30.1"
datasets = "^2.10.0"

[tool.poetry.group.notebook.dependencies]
jupyterlab = "^3.5.2"
ipywidgets = "^8.0.4"
matplotlib = "^3.6.3"

[tool.poetry.dev-dependencies]
urllib3 = "<2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"